--- a/solidity/package.json
+++ b/solidity/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "evm": "buidler node",
-    "test": "buidler test --network localhost",
+    "evm": "npx hardhat node",
+    "test": "npx hardhat test --network localhost",
     "typechain": "npx buidler typechain"
   },
   "author": "",
@@ -14,17 +14,24 @@
     "@nomiclabs/buidler": "^1.3.2",
     "@nomiclabs/buidler-ethers": "^1.3.2",
     "@nomiclabs/buidler-waffle": "^1.3.2",
-    "@types/chai": "^4.2.11",
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^5.0.0",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.5",
+    "@types/node": "^13.13.40",
+    "axios": "0.20.0",
     "buidler-gas-reporter": "^0.1.3",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^2.5.0",
-    "ethers": "^4.0.47",
-    "ts-node": "^8.10.1",
-    "typechain": "^1.0.5",
-    "typescript": "^3.8.3",
-    "axios": "0.20.0"
+    "ethereum-waffle": "^3.2.2",
+    "ethers": "^5.0.26",
+    "hardhat": "^2.0.8",
+    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-typechain": "^0.3.4",
+    "ts-node": "^8.10.2",
+    "typechain": "^4.0.0",
+    "typechain-target-ethers-v5": "^1.2.2",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.0.1",
