Add hardhat to builder.config.ts

--- a/solidity/tsconfig.json
+++ b/solidity/tsconfig.json
@@ -4,11 +4,12 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "moduleResolution": "node"
   },
   "include": ["./scripts", "./test"],
   "files": [
-    "./buidler.config.ts",
+    "./hardhat.config.ts",
     "./node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
     "./node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts",
     "node_modules/buidler-typechain/src/type-extensions.d.ts"
