--- a/solidity/package.json
+++ b/solidity/package.json
@@ -11,36 +11,46 @@
   "author": "",
   "license": "None",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.3.2",
-    "@nomiclabs/buidler-ethers": "^1.3.2",
-    "@nomiclabs/buidler-waffle": "^1.3.2",
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@ethersproject/abstract-signer": "^5.0.6",
+    "@ethersproject/bignumber": "^5.0.8",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@openzeppelin/contracts": "^3.0.1",
     "@typechain/ethers-v5": "^5.0.0",
-    "@types/chai": "^4.2.14",
+    "@types/chai": "^4.2.13",
+    "@types/command-line-args": "^5.0.0",
+    "@types/fs-extra": "^9.0.1",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.40",
-    "axios": "0.20.0",
-    "buidler-gas-reporter": "^0.1.3",
+    "@types/node": "^14.11.8",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.2.2",
-    "ethers": "^5.0.26",
-    "hardhat": "^2.0.8",
+    "command-line-args": "^5.1.1",
+    "commitizen": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "ethereum-waffle": "^3.2.0",
+    "ethers": "^5.0.24",
+    "fs-extra": "^9.0.1",
+    "hardhat": "^2.0.6",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.4",
+    "husky": "^4.3.0",
+    "mocha": "^8.1.3",
+    "prettier": "^2.1.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.1",
+    "shelljs": "^0.8.4",
+    "solc": "0.7.4",
+    "solhint": "^3.2.1",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.12",
+    "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
-    "typechain": "^4.0.0",
-    "typechain-target-ethers-v5": "^1.2.2",
+    "typechain": "^4.0.1",
     "typescript": "^3.9.7"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^3.0.1",
-    "@types/command-line-args": "^5.0.0",
-    "buidler-typechain": "0.0.5",
-    "command-line-args": "^5.1.1",
-    "ts-generator": "0.0.8",
-    "typechain-target-ethers": "^1.0.4",
-    "typechain-target-truffle": "^1.0.2",
-    "typechain-target-web3-v1": "^1.0.4"
   }
 }
