--- a/solidity/package.json
+++ b/solidity/package.json
@@ -17,17 +17,14 @@
     "@ethersproject/bignumber": "^5.0.8",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.0.1",
     "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.13",
-    "@types/command-line-args": "^5.0.0",
     "@types/fs-extra": "^9.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
-    "command-line-args": "^5.1.1",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^8.2.0",
@@ -37,8 +34,8 @@
     "ethers": "^5.0.24",
     "fs-extra": "^9.0.1",
     "hardhat": "^2.0.6",
-    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.4",
+    
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
@@ -51,6 +48,9 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
     "typechain": "^4.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "@openzeppelin/contracts": "^3.0.1",
+    "@types/command-line-args": "^5.0.0",
+    "command-line-args": "^5.1.1"
   }
 }
