--- a/solidity/package.json
+++ b/solidity/package.json
@@ -51,6 +51,7 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
     "typechain": "^4.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "axios": "0.21.1"
   }
 }
