--- a/solidity/package.json
+++ b/solidity/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "chai": "^4.2.0",
     "command-line-args": "^5.1.1",
     "commitizen": "^4.2.1",
