--- a/solidity/package.json
+++ b/solidity/package.json
@@ -7,7 +7,9 @@
     "evm": "npx hardhat node",
     "test": "npx hardhat test --network localhost",
     "typechain": "npx hardhat typechain",
-    "compile-deployer": "npx tsc -p . ; pkg dist/contract-deployer.js --targets node10-linux-x64"
+    "compile-deployer": "npx tsc -p . ; pkg dist/contract-deployer.js --targets node10-linux-x64",
+    "evm_fork": "npx hardhat node --fork https://eth-mainnet.alchemyapi.io/v2/${ALCHEMY_ID} --fork-block-number 11780000",
+    "test_fork": "npx hardhat test --network localhost ./tests_mainnet_fork/*.ts"
   },
   "author": "",
   "license": "None",
