--- a/solidity/tsconfig.json
+++ b/solidity/tsconfig.json
@@ -19,9 +19,11 @@
     "scripts/**/*",
     "tasks/**/*",
     "test/**/*",
+    "tests_mainnet_fork/**/*",
     "typechain/**/*",
     "types/**/*",
     "hardhat.config.ts",
-    "contract-deployer.ts"
+    "contract-deployer.ts",
+    "tests_mainnet_fork/uniswap-logic.ts"
   ]
 }
