Move forking mainnet is moved into new commands.
"evm_fork" to get a mainnet fork hardhat network.

"test fork" to get commands the require a mainet fork state

--- a/solidity/package.json
+++ b/solidity/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "evm": "npx hardhat node",
     "test": "npx hardhat test --network localhost",
+    "evm_fork":"npx hardhat node --fork https://eth-mainnet.alchemyapi.io/v2/${ALCHEMY_ID} --fork-block-number 11780000",
+    "test_fork": "npx hardhat test --network localhost ./tests_mainnet_fork/*.ts",
     "typechain": "npx hardhat typechain"
   },
   "author": "",
