--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,9 @@ jobs:
       - run: cd solidity && npm run typechain
       - run: cd solidity && npm run evm &
       - run: cd solidity && npm run test
+
+      - name: Test Solidity on Mainnet Fork
+      - run: cd solidity && npm run evm_fork
+      - run: cd solidity && npm run test_fork
+
+
