Upload Solidity artifacts and rust test-runner
During the release process we should update all the artifacts required
for downstream testing without focing them to re-build everything. In
this case the test-runner is a single binary that runs all the tests and
contains all the other functions inside. We also include the Peggy.json
solidity contract artifact so that users can always deploy Gravity
bridge as it was at a given release rather than having to deploy from
master.

--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -13,6 +13,9 @@ jobs:
   build:
     name: Build and upload release assets
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
@@ -51,7 +54,7 @@ jobs:
           draft: false
           prerelease: true
 
-      # the 4 Rust binaries, a loop would make this much more compact
+      # the 5 Rust binaries, a loop would make this much more compact
       - name: Upload Rust client
         id: upload-rust-release-client
         uses: actions/upload-release-asset@v1
@@ -92,6 +95,16 @@ jobs:
           asset_path: ./orchestrator/target/x86_64-unknown-linux-musl/release/register-peggy-delegate-keys
           asset_name: register-peggy-delegate-keys
           asset_content_type: application/bin
+      - name: Upload Rust test runner
+        id: upload-rust-test-runner
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./orchestrator/target/x86_64-unknown-linux-musl/release/test-runner
+          asset_name: test-runner
+          asset_content_type: application/bin
 
       - name: Upload Go Release Asset
         id: upload-go-release-asset
@@ -104,7 +117,39 @@ jobs:
           asset_name: peggy
           asset_content_type: application/bin
 
-      # next we start arm builds and uploads, we do this because the release
+      # next we upload the contract artifact, in a production situation a previous version will
+      # already be deployed on Ethereum and this won't be very useful, but as any chain leads up
+      # to launch it's nice to have a version history for the contract itself and see what if any
+      # changes are made that may go unnoticed due to tooling
+      - name: Build Solidity artifacts
+        run: cd solidity && npm ci && npm run typechain
+
+      - name: Tar artifacts folder
+        run: cd solidity && tar -czvf solidity-artifacts.tar.gz artifacts/
+
+      - name: Upload Gravity Ethereum artifacts
+        id: upload-solidity-artifacts
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: solidity/artifacts/contracts/Peggy.sol/Peggy.json
+          asset_name: Peggy.json
+          asset_content_type: application/bin
+
+      - name: Upload contract deployer
+        id: upload-contract-deployer
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: solidity/contract-deployer.ts
+          asset_name: contract-deployer.ts
+          asset_content_type: application/bin
+
+      # finally we start arm builds and uploads, we do this because the release
       # entry is already made and rust builds take nearly 10 minutes, so instead
       # of having a workable release in 20 minutes we can have one in 10 with the ARM
       # binaries coming 10 minutes later.
