Arbitrary logic Rust + Testing environment
This pull request is very expansive. Far larger than I normally
like. That being said most of what's in here is boilerplate as we
are duplicating one of our major program flows this touches just about
every file.

Distinct changes in this pull request
* Tests now support hardhat, currently this is only triggered by
  requesting the arbitrary logic test
* In order to support mainnet forking AlchemyID is also passed as
  required and otherwise ignored outside of the arbitrary logic tests

Go Changes
* Add code for signature verification of arbitrary logic confirms
* Tests for signature verificatoin of arbitrary logic confirms
* Add tests for arbitrary logic queries
* Add testing only endblocker to create an arbitrary logic call and
  simulate an external module doing so.
* Missing boilerplate for queriers and messages that was omitted in the
  previous patch

Solidity changes
* A new test that produces the required signatures to check signature
  verification code for calls in both Rust and Go
* Contract deployer now deploys the uniswap liquidity contract, to be
  used by the arbitrary logic call tests

Rust
* Code for logic call confirmation reading, signing, submission
* Code for relaying of logic calls
* New generic code for ordering signatures across all call types
* Incomplete code for logic call event parsing
* Incomplete code for logic call Solidity function calling

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -37,3 +37,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run all up batch stress test
         run: tests/all-up-test.sh V2_HAPPY_PATH
+  arbitrary-logic:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run all up arbitrary logic test
+        run: tests/all-up-test.sh ARBITRARY_LOGIC $ALCHEMY_ID
+        env:
+          ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
